05..01.2025 testing fixes
